samples/_failures_safe/1761076201_f16ce1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4fe17fb.c: In function ‘main’:
./samples/SAFE/__tmp_b4fe17fb.c:153:28: error: missing terminating " character
  153 |                     printf("Matrix A
      |                            ^~~~~~~~~
./samples/SAFE/__tmp_b4fe17fb.c:153:21: error: expected expression at end of input
  153 |                     printf("Matrix A
      |                     ^~~~~~
./samples/SAFE/__tmp_b4fe17fb.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4fe17fb.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4fe17fb.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4fe17fb.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4fe17fb.c:153:21: error: expected declaration or statement at end of input
